--- a/artikel.html
+++ b/artikel.html
@@ -14,18 +14,20 @@
             <span class="logo-black">Medi</span><span class="logo-blue">Care</span>
         </div>
         
-        <nav class="nav">
-            <ul>
-                <li><a href="index.html">Beranda</a></li>
-                <li><a href="artikel.html" class="active">Artikel</a></li>
-                <li><a href="#">Tentang kami</a></li>
-                <li><a href="#">Konsultasi</a></li>
+       <nav class="nav">
+             <ul>
+                <li><a href="index.html" class="active">Beranda</a></li>
+                <li><a href="artikel.html">Artikel</a></li>
+                <li><a href="tentang.html">Tentang kami</a></li>
+                <li><a href="konsultasi.html">Konsultasi</a></li> 
             </ul>
-        </nav>
+            </nav>
         
         <div class="profile-icon">
-            <img src="assets/images/profil.jpg" alt="Foto profil pengguna">
-        </div>
+                <a href="profil.html">
+                    <img src="assets/images/profil.jpg" alt="Foto profil pengguna">
+                </a>
+            </div>
     </header>
 
     <main class="article-page">
