--- a/chatbot.html
+++ b/chatbot.html
@@ -14,17 +14,19 @@
         </div>
         
         <nav class="nav">
-            <ul>
-                <li><a href="index.html">Beranda</a></li>
+             <ul>
+                <li><a href="index.html" class="active">Beranda</a></li>
                 <li><a href="artikel.html">Artikel</a></li>
-                <li><a href="#">Tentang kami</a></li>
-                <li><a href="chatbot.html" class="active">Konsultasi</a></li>
+                <li><a href="tentang.html">Tentang kami</a></li>
+                <li><a href="konsultasi.html">Konsultasi</a></li> 
             </ul>
-        </nav>
+            </nav>
         
         <div class="profile-icon">
-            <img src="assets/images/profil.jpg" alt="Foto profil pengguna">
-        </div>
+                <a href="profil.html">
+                    <img src="assets/images/profil.jpg" alt="Foto profil pengguna">
+                </a>
+            </div>
     </header>
 
     <main class="simple-chatbot-page">
@@ -50,28 +52,6 @@
             </div>
         </div>
     </main>
-
-    <footer class="footer">
-        <div class="footer-logo">
-            <!-- Logo footer -->
-        </div>
-        <div class="footer-links">
-            <h4>Link Terkait</h4>
-            <ul>
-                <li><a href="https://www.idionline.org/" target="_blank">Ikatan Dokter Indonesia (IDI)</a></li>
-                <li><a href="https://www.intothelightid.org/" target="_blank">Into The Light Indonesia</a></li>
-                <li><a href="https://kemkes.go.id/" target="_blank">Kementerian Kesehatan</a></li>
-            </ul>
-        </div>
-        <div class="footer-contact">
-            <h4>Kontak</h4>
-            <ul>
-                <li>Jl. Muliadi Panjang No.110, Canggu, Kec. Kuta Utara, Kabupaten Badung, Bali</li>
-                <li>MediCare18@gmail.com</li>
-                <li>081336465210</li>
-            </ul>
-        </div>
-    </footer>
 
     <script src="js/chatbot-simple.js"></script>
 </body>
