--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@
             <img src="/assets/images/logo.jpg"  alt="Logo Medicare">
             <span class="logo-black">Medi</span><span class="logo-blue">Care</span>
         </div>
-        <nav class="nav">
-            <ul>
+
+            <nav class="nav">
+             <ul>
                 <li><a href="index.html" class="active">Beranda</a></li>
-                <li><a href="artikel.html">Artikel</a></li> 
-                <li><a href="#">Tentang kami</a></li>
-                <li><a href="#">Konsultasi</a></li>
+                <li><a href="artikel.html">Artikel</a></li>
+                <li><a href="tentang.html">Tentang kami</a></li>
+                <li><a href="konsultasi.html">Konsultasi</a></li> 
             </ul>
-        </nav>
-        <div class="profile-icon">
-            <img src="assets/images/Profil.jpg" alt="Foto profil pengguna">
-        </div>
+            </nav>
+
+            <div class="profile-icon">
+                <a href="profil.html">
+                    <img src="assets/images/profil.jpg" alt="Foto profil pengguna">
+                </a>
+            </div>
     </header>
 
     <main>
