--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="hero-content">
                 <h1>Lorem ipsum dolor sit amet, onsectetur tempor incididunt ut labore et dolore magna</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse accumsan lacus vel facilisis.</p>
-                <button class="btn-primary">Konsultasi Sekarang</button>
+                <a href="konsultasi.html" class="btn-primary">Konsultasi Sekarang</a>
             </div>
             <div class="hero-image">
                 <img src="assets/images/background.jpg" alt="Dokter memberikan konsultasi online kepada pasien">
