--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     </head>
 <body>
 
-    <header class="header">
-        <div class="logo">
-            <img src="/assets/images/logo.jpg"  alt="Logo Medicare">
-            <span class="logo-black">Medi</span><span class="logo-blue">Care</span>
-        </div>
+        <header class="header">
+            <div class="logo">
+                <img src="assets/images/logo.jpg"  alt="Logo Medicare"> 
+                <span class="logo-black">Medi</span><span class="logo-blue">Care</span>
+            </div>
+        
 
             <nav class="nav">
              <ul>
@@ -28,8 +29,8 @@
                     <img src="assets/images/profil.jpg" alt="Foto profil pengguna">
                 </a>
             </div>
-    </header>
-
+        </header>
+        
     <main>
         <section class="hero-section">
             <div class="hero-content">
