--- a/chatbot.html
+++ b/chatbot.html
@@ -16,7 +16,7 @@
                 </a>
                 <div class="chat-title-info">
                     <div class="chat-title-simple">
-                        <strong>MediCareBot</strong>
+                        <strong>MedihowCareBot</strong>
                 </div>
             
             </div>
