--- a/profil.html
+++ b/profil.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil Pengguna | medicare</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/profil.css">
 </head>
 <body>
     <header class="header">
         <div class="logo">
-            <img src="assets/images/logo.jpg" alt="Logo Medicare">
-            <span class="logo-black">Medi</span><span class="logo-blue">Care</span>
+            <img src="assets/images/logo.png" alt="Logo Medicare">
+            <span class="logo-text">MediCare</span>
         </div>
         
         <nav class="nav">
