--- a/profil.html
+++ b/profil.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="assets/images/logo.png" alt="Logo Medicare">
+            <img src="assets/icons/flower.svg" alt="Logo Medicare">
             <span class="logo-text">MediCare</span>
         </div>
         
