--- a/tentang.html
+++ b/tentang.html
@@ -6,6 +6,7 @@
     <title>Tentang Kami | medicare</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tentang.css">
+    <link rel="stylesheet" href="css/auth.css">
 </head>
 <body>
     <header class="header">
