--- a/artikel.html
+++ b/artikel.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mengenal Gejala Awal Stres dan Cara Mengelolanya | Medicare</title>
+    <title>Artikel | Medicare</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/artikel.css">
+    <link rel="stylesheet" href="css/auth.css">
 </head>
 <body>
 
