--- a/chatbot.html
+++ b/chatbot.html
@@ -6,6 +6,7 @@
     <title>Chatbot | Medicare</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/chatbot.css">
+    <link rel="stylesheet" href="css/auth.css">
 </head>
 <body class="chatbot-body">
     <!-- Header -->
@@ -117,15 +118,15 @@
             <div class="input-section">
                 <div class="input-container">
                     <div class="input-wrapper">
-                        <textarea 
+                        <textarea
                             id="userInput" 
                             placeholder="Tanyakan apapun tentang kesehatan mental..." 
                             rows="1"
-                            class="message-input"
-                        ></textarea>
+                            class="message-input">
+                        </textarea>
                         <button id="sendButton" class="send-button" disabled>
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M2 21L23 12L2 3V10L17 12L2 14V21Z" fill="currentColor"/>
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M12 19V5M12 5L5 12M12 5L19 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         </button>
                     </div>
