--- a/tentang.html
+++ b/tentang.html
@@ -69,8 +69,9 @@
                  <div class="feature-number">1</div>
                     <h3>Bersama, kita Bisa Pulih dan Bertumbuh</h3>
             </div>
-                    <p>Setiap orang berhak merasakan hidup yang lebih baik, melewati berbagai perasaan yang tidak selamanya mudah. 
-                    Kesehatan mental adalah bagian penting dari perjalanan hidup yang seimbang.</p>
+                    <p>Setiap orang pernah merasa lelah, kehilangan arah, atau terjebak dalam perasaan yang sulit dijelaskan. Di Medicare, 
+                        kami percaya bahwa kesehatan mental adalah bagian penting dari perjalanan hidup yang seimbang. 
+                        Kami hadir untuk mendampingi kamu menemukan ketenangan, memahami diri sendiri, dan memulihkan semangat yang sempat pudar.</p>
                     </div>
                     <div class="feature-image">
                         <img src="assets/images/picture2.jpg" alt="Bersama pulih dan bertumbuh">
@@ -83,8 +84,9 @@
                  <div class="feature-number">2</div>
                     <h3>Perawatan yang Aman, Hangat, dan Dapat Dipercaya</h3>
             </div>
-                    <p>Kami menyediakan layanan konsultasi dan pendampingan kesehatan mental yang profesional dan terpercaya. 
-                        Setiap klien mendapatkan perhatian penuh dari tim yang berpengalaman.</p>
+                    <p>Kami menyediakan layanan konseling dan pendampingan kesehatan mental berbasis empati. 
+                    Setiap klien kami perlakukan dengan penuh rasa hormat, tanpa penilaian, dan dengan menjaga privasi sepenuhnya. 
+                    Melalui kolaborasi dengan tenaga profesional dan konselor berpengalaman, MediCare berkomitmen memberikan lingkungan yang aman</p>
                     </div>
                     <div class="feature-image">
                         <img src="assets/images/picture3.jpg" alt="Perawatan aman dan hangat">
@@ -97,8 +99,9 @@
                  <div class="feature-number">3</div>
                     <h3>Kolaborasi dengan Ahli yang Berpengalaman</h3>
             </div>
-                    <p>Kami bekerja sama dengan psikolog dan psikiater yang memiliki keahlian untuk 
-                    membantu menemukan solusi terbaik bagi permasalahan kesehatan mental Anda.</p>
+                    <p>Kami bekerja sama dengan para ahli psikologi, terapis, serta lembaga kesehatan untuk memastikan dukungan yang menyeluruh dan berbasis bukti ilmiah.
+                        Pendekatan kami memadukan empati manusia dengan teknologi digital yang mudah diakses, 
+                        sehingga siapa pun dapat mendapatkan bantuan kapan pun mereka butuh..</p>
                     </div>
                     <div class="feature-image">
                         <img src="assets/images/picture4.jpg" alt="Kolaborasi dengan ahli">
@@ -111,7 +114,9 @@
                         <div class="feature-number">4</div>
                         <h3>Untuk Kamu yang Ingin Didengar</h3>
                 </div>
-                        <p>Tidak ada kata yang tidak penting. Setiap cerita dan perasaan berharga. Medicare hadir bukan hanya sebagai penyedia layanan, tapi sebagai tempat di mana Anda bisa merasa aman.</p>
+                        <p> Tidak ada masalah yang terlalu kecil untuk dibicarakan. MediCare hadir bukan hanya sebagai layanan, 
+                            tapi juga sebagai tempat di mana kamu bisa merasa dimengerti. Kami percaya, 
+                            proses penyembuhan dimulai ketika seseorang benar-benar didengarkan.</p>
                         <p class="quote">"Kami percaya: proses penyembuhan dimulai ketika setiap orang didengar dengan sepenuh hati."</p>
                     </div>
                     <div class="feature-image">
