--- a/Frontend/artikel.html
+++ b/Frontend/artikel.html
@@ -146,11 +146,15 @@
                 <h5>Newsletter</h5>
                 <p>Dapatkan tips kesehatan mental mingguan</p>
                 <div class="newsletter-form">
-                    <input type="email" placeholder="Email Anda">
-                    <button class="btn-subscribe">Subscribe</button>
+                    <input type="email" id="newsletter-email" placeholder="Email Anda" required>
+                    <button class="btn-subscribe" id="btn-subscribe">Subscribe</button>
+                    <button class="btn-unsubscribe" id="btn-unsubscribe" style="display: none;">Unsubscribe</button>
                 </div>
+                <div id="newsletter-message" class="newsletter-message"></div>
+                <div id="newsletter-status" class="newsletter-status"></div>
             </div>
         </div>
+    </div>
     </div>
 
     <div class="footer-bottom">
